# potts-spaces

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  test_app.py  test_existing_behavior.py  test_health.py  test_health_check.py  test_logging.py  test_main.py  test_request_logging.py
potts_spaces/: __init__.py  app.py
potts_spaces.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: app.py
tests/: conftest.py  test_config_reload.py  test_error_envelope.py  test_health.py  test_health_check.py  test_health_contract.py  test_health_smoke.py  test_hello_endpoint.py  test_hello_smoke.py  test_idempotent_create.py  test_list_api_stress.py  test_local_startup.py  test_logging.py  test_readme_startup_docs.py  test_request_logging.py  test_request_tracing.py
